Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101680

MySQL plugin: QSqlQuery::prepare + exec no results when table contains JSON type

XMLWordPrintable

    • 9d27c07e2 (dev), d2b6c2f7e (tqtc/lts-6.2), 1bf394a4c (tqtc/lts-5.15), 5ed99a42a (6.4)

      Using prepared statements with a table that contains JSON type doesn't seem to work. While QSqlQuery prepare call itself returns "true" and subsequent exec call also succeeds the result will not contain any rows whatsoever. If the query is executed directly the problem does not occur. Also as soon as the JSON is removed from the table the prepared statements start working.

      Steps to reproduce the problem:

      1. set up a table in database (check the attached .sql)
      2. fill in the hostname, dbname etc
      3. run the attached project => (using prepared statement) no results or errors printed out
      4. run the attached project with "-w" => (using just exec) results found and printed out

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            miikapernu Miika Pernu
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            3 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes