SQL/MySQL: fix handling of json column

Add handling for MYSQL_TYPE_JSON by treating it the same as
MYSQL_TYPE_BLOB (which is used by current MariaDB Server for a json
column)

Fixes: QTBUG-101680
Change-Id: I4d4b0cdad73cd12e0db4df4021fddbd6a649c8ed
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 9d27c07e284457fb86258ab518f39c5cab1dac80)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>